k8s/1000-gitlab/40-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitlab
  name: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:13.8.3-ce.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: gitlab
              mountPath: /etc/gitlab
              subPath: gitlab_configuration
            - name: gitlab
              mountPath: /var/opt/gitlab
              subPath: gitlab_data
          ports:
            - name: http-web
              containerPort: 80
            - name: tcp-ssh
              containerPort: 22
      volumes:
        - name: gitlab
          persistentVolumeClaim:
            claimName: gitlab-claim
