k8s/1000-gitlab/10-services.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-http-svc
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - name: http-web
      protocol: "TCP"
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh-svc
  namespace: gitlab
  labels:
    app: gitlab-ssh
spec:
  selector:
    app: gitlab
  ports:
    - name: ssh
      protocol: "TCP"
      targetPort: 30022
      port: 22
  type: LoadBalancer
