k8s/1000-gitlab/42-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: gitlab
  labels:
    app: gitlab
spec:
  ports:
    - name: redis
      protocol: "TCP"
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitlab
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis # has to match .spec.template.metadata.labels
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:6.2-rc3-alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis
              mountPath: /data
              subPath: redis_data
            - name: redis
              mountPath: /var/lib/redis
              subPath: lib_redis
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis-claim
