k8s/1000-gitlab/50-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ing
  namespace: gitlab
  labels:
    app: gitlab
  annotations:
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: selfsigned-issuer
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: "gitlab.dev.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitlab-svc
            port:
              number: 80
  - host: "reg.gitlab.dev.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitlab-svc
            port:
              number: 5005
  tls:
    - hosts:
        #- reg.gitlab.dev.lan
        - gitlab.dev.lan
      secretName: gitlab-home-tls
